--- a/src/main/resources/templates/climbs/routes.html
+++ b/src/main/resources/templates/climbs/routes.html
@@ -9,7 +9,10 @@
     </head>
     <body>
 
-        <h1 class="text-center text-primary">Routes</h1>
+        <div class="d-flex justify-content-between">
+            <h1 class="text-left text-primary">Routes</h1>
+            <a class="text-right btn btn-primary m-2" href="#" th:href="@{/climbs/routes/create}">Create</a>
+        </div>
 
         <table class="table table-hover">
             <thead class="table-primary">
