--- a/src/main/resources/templates/create/create_route.html
+++ b/src/main/resources/templates/create/create_route.html
@@ -10,7 +10,7 @@
     </head>
     <body>
 
-    <h1 class="text-center text-primary">Add Climb</h1>
+    <h1 class="text-center text-primary">Add Route</h1>
 
         <div class="mx-auto w-75">
             <form th:object="${route}" th:action="@{/climbs/routes/new_route/}" method="post">
