--- a/src/main/resources/templates/climbs/boulders.html
+++ b/src/main/resources/templates/climbs/boulders.html
@@ -12,7 +12,7 @@
 
         <div class="d-flex justify-content-between">
             <h1 class="text-left text-primary">Boulders</h1>
-            <a class="text-right btn btn-primary m-2" href="#" th:href="@{/climbs/boulders/create}">Create</a>
+            <a class="text-right btn btn-primary m-2" href="#" th:href="@{/climbs/boulders/create}">Add Boulder</a>
         </div>
 
         <table class="table table-hover">
