--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -21,7 +21,7 @@
               <a class="nav-link link-light dropdown-toggle" role="button" data-bs-toggle="dropdown">Log</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item link-dark" href="#" th:href="@{/log/pitches}">Pitches</a></li>
-                <li><a class="dropdown-item link-dark" href="#">Bouldering</a></li>
+                <li><a class="dropdown-item link-dark" href="#" th:href="@{/log/bouldersessions}">Bouldering</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
