--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -20,15 +20,15 @@
             <li class="nav-item dropdown">
               <a class="nav-link link-light dropdown-toggle" role="button" data-bs-toggle="dropdown">Log</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item link-dark" href="#" th:href="@{/log/pitches}">Pitches</a></li>
-                <li><a class="dropdown-item link-dark" href="#" th:href="@{/log/bouldersessions}">Bouldering</a></li>
+                <li><a class="dropdown-item link-dark" href="#" th:href="@{/log/pitch}">Pitches</a></li>
+                <li><a class="dropdown-item link-dark" href="#" th:href="@{/log/bouldersession}">Bouldering</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link link-light dropdown-toggle" role="button" data-bs-toggle="dropdown">Climbs</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item link-dark" href="#" th:href="@{/climbs/routes}">Routes</a></li>
-                <li><a class="dropdown-item link-dark" href="#" th:href="@{/climbs/boulders}">Boulders</a></li>
+                <li><a class="dropdown-item link-dark" href="#" th:href="@{/climbs/route}">Routes</a></li>
+                <li><a class="dropdown-item link-dark" href="#" th:href="@{/climbs/boulder}">Boulders</a></li>
               </ul>
             </li>
             <li class="nav-item">
