Closes #8. fixed droopy button and fixed some minor bugs in views

--- a/src/main/resources/templates/climbs/routes.html
+++ b/src/main/resources/templates/climbs/routes.html
@@ -9,9 +9,9 @@
     </head>
     <body>
 
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-between mb-2">
             <h1 class="text-left text-primary">Routes</h1>
-            <a class="text-right btn btn-primary m-2" href="#" th:href="@{/climbs/routes/create}">Add Route</a>
+            <a class="btn btn-lg btn-primary m-2" href="#" th:href="@{/climbs/route/create}">Add Routes</a>
         </div>
 
         <table class="table table-hover">
