--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <h1 class="text-center text-primary">404 Not Found</h1>
+    <h1 class="text-center text-primary mt-5">404 Not Found</h1>
 
   </body>
 </html>
