--- a/src/main/resources/templates/climbs/boulders.html
+++ b/src/main/resources/templates/climbs/boulders.html
@@ -10,9 +10,9 @@
     </head>
     <body>
 
-        <div class="d-flex justify-content-between">
+        <div class="d-flex justify-content-between mb-2">
             <h1 class="text-left text-primary">Boulders</h1>
-            <a class="text-right btn btn-primary m-2" href="#" th:href="@{/climbs/boulders/create}">Add Boulder</a>
+            <a class="btn btn-lg btn-primary m-2" href="#" th:href="@{/climbs/boulder/create}">Add Boulders</a>
         </div>
 
         <table class="table table-hover">
